--- a/Bingo.Test/Bingo.Test.csproj
+++ b/Bingo.Test/Bingo.Test.csproj
@@ -19,4 +19,8 @@
         </PackageReference>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Bingo\Bingo.csproj" />
+    </ItemGroup>
+
 </Project>
